2008-08-27 : Added newsletter option to demographic (Randy)
2008-08-26 : Tagged repositiory with  B4_MULTIPLE-ECHARTS (Randy)
             Changed cme/encounter to work off of request scope forms in
             both CAISI and OSCAR  
2008-08-26 : Paste oscar messages into new encounter (Randy)             
2008-08-22 : Old CME has option to sort asc and desc now. (Ted)
2008-08-01 : detailed history of caisi integrator consent is viewable. (Ted)
2008-07-28 : caisi integrator uses ssl. (Ted)
2008-07-22 : caisi integrator supports referrals between facilities. (Ted)

---------------------------
Changes prior to 2008-07-17
---------------------------
PMM:

-Home and Logout buttons are now in the top right hand corner

-“Oscar Medical” the link used to bring you back to case management screen has been renamed, the link on the navigator bar is now called “Case Management”

-New Report link: User Created Form Report: This will create a report based on a specific user created form

-Dependencies (spouse, partner, child, sibling, etc.): With the upgrade comes the new feature that allows a provider to link more then one file together. For example, a woman and her 2 children are staying in a shelter; the provider can create separate files for all 3 individuals, but can link them based on their relationship. Follow these steps:
-Program Management Module
-Summary Page for a client
-Second Tab down says “family”
-Click on update and enter in the last name to search for family members/dependents
-Add member to client file

-Health and Safety Message on client PMM Summary: On the summary tab for a client, in the Program Management Module, users can add in a health and safety message simply by clicking on “New Health and Safety”, entering message and pressing save
